// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/meta-refresh.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/meta-refresh.md inline validation: incorrect-delay 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 37,
        "line": 1,
        "message": "Meta refresh must be instant (0 second delay)",
        "offset": 36,
        "ruleId": "meta-refresh",
        "ruleUrl": "https://html-validate.org/rules/meta-refresh.html",
        "selector": "meta",
        "severity": 2,
        "size": 17,
      },
    ],
    "source": "<meta http-equiv="refresh" content="5;url=target.html">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/meta-refresh.md inline validation: incorrect-url 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 37,
        "line": 1,
        "message": "Don't use instant meta refresh to reload the page",
        "offset": 36,
        "ruleId": "meta-refresh",
        "ruleUrl": "https://html-validate.org/rules/meta-refresh.html",
        "selector": "meta",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<meta http-equiv="refresh" content="0">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/meta-refresh.md inline validation: long-delay-invalid 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 37,
        "line": 1,
        "message": "Meta refresh must be instant (0 second delay)",
        "offset": 36,
        "ruleId": "meta-refresh",
        "ruleUrl": "https://html-validate.org/rules/meta-refresh.html",
        "selector": "meta",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<meta http-equiv="refresh" content="72001">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/meta-refresh.md inline validation: long-delay-valid 1`] = `[]`;
